Update readme to include sbt opts